Bug 291923 - Commit a63d4cd05d0fb61f107e925589986bd635b6666a breaks first start of KGpg
Summary: Commit a63d4cd05d0fb61f107e925589986bd635b6666a breaks first start of KGpg
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.x
Platform: Unlisted Binaries Linux
: NOR major
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
: 290113 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-19 06:44 UTC by Ben Cooksley
Modified: 2015-01-08 21:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Cooksley 2012-01-19 06:44:20 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Due to changes introduced in commit a63d4cd05d0fb61f107e925589986bd635b6666a it is no longer possible to start KGpg unless you already have an existing configuration file.

This is caused by "gpg_config_path" not being set in the config file (which does not exist on first start).



Reproducible: Always

Steps to Reproduce:
1) Start KGpg
2) Recieve dialog about GPG setup problems

Actual Results:  
KGpg first setup wizard fails to launch, KGpg is not usable.

Expected Results:  
KGpg first setup wizard launches.

Running the following command works around the issue and allows for first setup to be completed.

kwriteconfig --file kgpgrc --group "GPG Settings" --key "gpg_config_path" --type string "$HOME/.gnupg/gpg.conf"
Comment 1 Patrick Spendrin 2012-01-19 10:25:37 UTC
Git commit fa0b4565a2c4aa672dc4c285d1bd445e055da626 by Patrick Spendrin.
Committed on 19/01/2012 at 11:24.
Pushed by sengels into branch 'KDE/4.8'.

fix startup when no config file is defined

M  +5    -3    gpgproc.cpp

http://commits.kde.org/kgpg/fa0b4565a2c4aa672dc4c285d1bd445e055da626
Comment 2 Rolf Eike Beer 2012-01-21 09:53:54 UTC
*** Bug 290113 has been marked as a duplicate of this bug. ***