fix startup when no config file is defined

BUG:291923